# RAN

./: .gitignore  LICENSE  README.md  pyproject.toml
agents/: agent.py  behavior.py  decision.py  llm_client.py  mobility.py
configs/: .gitkeep
configs/experiments/: .gitkeep
configs/ran/: .gitkeep
configs/scenes/: .gitkeep
docs/: team_README.md
editor/: README.md  __init__.py  editor_user_manual_en.md  editor_user_manual_zh.md  index.html  server.py
editor/data/scenes/: bristol_topology.json  community_outdoor.json  home.json  index.json  office.json  potions_teacher_office.json
editor/live/: index.html  livePreview.css  livePreview.js
editor/src/app/: contextMenu.js  editorStore.js  main.js  propertyEditor.js
editor/src/scene_model/: sampleScene.js  sceneAdapter.js
editor/src/scene_preview/: ScenePreview.js  geometry.js
editor/src/styles/: editor.css
outputs/: .gitkeep  area_b_map.json
outputs/logs/: .gitkeep
outputs/metrics/: .gitkeep
outputs/reports/: .gitkeep
services/: map_service.py  preview_service.py  scene_service.py
simulation/: clock.py  main.py  simulation_loop.py  state.py
structure/: README.md  SCENE_REPLACEMENT_GUIDE.md  __init__.py  area_elements.py  scene_registry.py  scene_schema.py  scene_tree.py  space_layout.py
structure/scenes/: __init__.py
structure/scenes/bristol_topology/: README.md  __init__.py  elements.py  layout.py  scene.py
structure/scenes/community_outdoor/: __init__.py  elements.py  layout.py  scene.py
structure/scenes/home/: README.md  __init__.py  elements.py  layout.py  scene.py
structure/scenes/office/: README.md  __init__.py  elements.py  layout.py  scene.py
structure/scenes/potions_teacher_office/: README.md  __init__.py  elements.py  layout.py  scene.py  scene_spec.md
team/: README.md
