[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ran"
version = "0.1.0"
description = "Standalone scene-structure definitions and builders."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Kilo377" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
include = ["structure*"]

[tool.setuptools.package-data]
"structure.scenes.home" = ["*.png"]
"structure.scenes.office" = ["*.png"]
"structure.scenes.potions_teacher_office" = ["*.png", "*.md"]
